# interview

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  diagram.drawio
include/: doctor.hpp  gender.hpp  patient.hpp  person.hpp  queueStrategyI.hpp  queueStrategySort.hpp  registry.hpp  utils.hpp  waitingList.hpp
include/person/: combGenerator.hpp  conditionEnum.hpp  doctor.hpp  doctorSpecialtyEnum.hpp  genderEnum.hpp  numGenerator.hpp  patient.hpp  person.hpp  statusEnum.hpp
include/registry/: queueStrategyHeap.hpp  queueStrategyI.hpp  queueStrategySort.hpp  registry.hpp  waitingList.hpp
src/: CMakeLists.txt  combGenerator.cpp  doctor.cpp  main.cpp  patient.cpp  person.cpp  registry.cpp
test/: CMakeLists.txt  main.cpp  personTest.cpp  registry.cpp  registryTest.cpp  waitingListTest.cpp
