cmake_minimum_required(VERSION "3.9.2")

project(interview)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS "-O2")
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
# set(CMAKE_CXX_FLAGS_DEBUG "-g -pedantic-errors -Wall -Wextra -std=c++17")
set(CMAKE_CXX_FLAGS_DEBUG "-g -pedantic-errors -Wall -Wextra -fsanitize=address")
# set(CMAKE_CXX_CLANG_TIDY clang-tidy -checks=-*,-clang-analyzer-*,performance-*,readability-*,-readability-implicit-bool-conversion,-readability-magic-numbers,modernize-*,-modernize-use-trailing-return-type,bugprone-*)
include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
conan_basic_setup(NO_OUTPUT_DIRS)
enable_testing()
include_directories(include)
option(TEST "Enable tests")
if (${TEST})
  add_subdirectory(test)
else()
  file(GLOB SOURCES CONFIGURE_DEPENDS src/*.cpp)
  add_executable(main ${SOURCES} src/main.cpp)
  target_include_directories(main PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
  target_link_libraries(main ${CONAN_LIBS})
endif()
